ECA-1849: I redesigned the whole healthcheck bit, extracting all the fun stuff to AbstractHealthServlet, while letting derivative servlets define fun stuff such as constants and what implementations of IHealthCheck and IHealthResponse they would like to use. This allows the derivative servlets to pass their own injected session beans on to whatever classes they implement, and also removes some redundant XML configuration.
Since the healhcheck functionality wasn't tested, I created a system test for it and added it to the runocsp test suite. In doing this, I also fixed a minor bug in ExtOCSOHealthCheck. Yay, me!

git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@10007 37aeb1de-b14b-0410-9a0e-82b28170d228